Revert "javafx"
This reverts commit 024b02c0d7b403e9aa2dc90c666c452e68ae70a5